# webpeditor

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  _delete_old_static_cache.py  build_files.sh  delete_old_css_files.py  delete_old_css_styles.py  delete_old_static_cache.py  fly.toml  manage.py  noxfile.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  tach.toml  tailwind.config.js  vercel.json
.claude/rules/: api.md  django.md  frontend.md
.github/workflows/: django-ci.yml
.run/: webpeditor - Development.run.xml  webpeditor - Stage.run.xml  webpeditor - Staging.run.xml
.vercel/: project.json
api/: action_result.py  admin.py  authenticator.py  middlewares.py  models.py  registration.py  throttling.py  urls.py
api/authentication/: authenticator.py
api/controllers/: controller_base.py  converter_controller.py
api/middlewares/: error_handling.py
application/: di.py
common/application/: di.py
common/core/: di.py  utils.py
common/infrastructure/: di.py
converter/: admin.py  apps.py  urls.py
converter/application/: di.py
converter/domain/: constants.py
converter/infrastructure/: converter_files_repository.py  converter_repository.py  di.py
core/: di.py  types.py
core/logging/: formatters.py  logger.py
core/result/: __init__.py  context_result.py  error_context.py
domain/common/: models.py
domain/constants/: converter_constants.py  editor_constants.py
domain/converter/: constants.py  models.py
domain/editor/: constants.py
editor/: admin.py  apps.py  urls.py
editor/domain/: constants.py  image_formats.py
editor/infrastructure/: di.py  editor_repository.py
infrastructure/: admin.py  apps.py  di.py  utils.py
infrastructure/abc/: converter_image_assets_repository_abc.py  converter_repository_abc.py  editor_image_assets_repository_abc.py  editor_repository_abc.py  files_repository_abc.py
infrastructure/cloudinary/: cloudinary_client.py  models.py  types.py
infrastructure/repositories/: converter_files_repository.py  converter_repository.py  editor_repository.py
jobs/: cleanup_job.py
static/: staticfiles.json
static/js/: sw.js
static/src/: input.css  output.css
templates/: _base.html  about.html  contact.html  imageConvert.html  imageDoesNotExist.html  imageEdit.html  imageInfo.html  imageIsNotUploadedView.html  imageUpload.html  index.html  noContent.html  test.html
templates/admin/: base.html  base_site.html  login.html
templates/imageDoesNotExistView/: imageDoesNotExist.html
templates/imageEditView/: imageEdit.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html
templates/webpeditor_app/: _base.html  about.html  bg-animation.html  contact.html  content-not-found.html  image-converter.html  image-editor.html  image-info.html  image-uploader.html  imageDoesNotExist.html  imageEdit.html  imageInfo.html  imageIsNotUploadedView.html  imageUpload.html  noContent.html
tests/: main.py
typings/aiocache/: __init__.pyi  base.pyi  decorators.pyi  exceptions.pyi  factory.pyi  lock.pyi  plugins.pyi
typings/cloudinary/: __init__.pyi  api.pyi  auth_token.pyi  compat.pyi  exceptions.pyi  forms.pyi  http_client.pyi  models.pyi  search.pyi  search_folders.pyi  uploader.pyi  utils.pyi
typings/django/: shortcuts.pyi
typings/django_injector/: apps.pyi
typings/django_otp/: __init__.pyi  admin.pyi  conf.pyi  forms.pyi  models.pyi  oath.pyi  qr.pyi  util.pyi
typings/environ/: __init__.pyi  compat.pyi  environ.pyi  fileaware_mapping.pyi
typings/punq/: __init__.pyi  _compat.pyi
views/: __image_edit_view.py  __image_info_view.py  __image_upload_view.py  about_view.py  contact_view.py  content_not_found_view.py  image_converter_view.py  image_not_found_view.py
views/templatetags/: exif_decode.py  string_manipulations.py
webp_editor/: manage.py
webp_editor/webp_editor/: asgi.py  settings.py  urls.py  wsgi.py
webpeditor/: asgi.py  logging_filters.py  logging_formatters.py  manage.py  settings.py  tailwind.config.js  urls.py  views.py  wsgi.py
webpeditor/templates/: _base.html  index.html
webpeditor/webpeditor/: settings.py  wsgi.py
webpeditor_app/: admin.py  api.py  apps.py  forms.py  globals.py  models.py  serializers.py  types.py  urls.py  views.py
webpeditor_app/__converter/: image_delete_converted_api.py  image_download_converted_api.py  image_download_edited_api.py  image_get_original_api.py  image_save_api.py
webpeditor_app/api/: action_result.py  authenticator.py  image_convert_api.py  image_delete_converted_api.py  image_download_api.py  image_download_converted_api.py  image_download_edited_api.py  image_get_original_api.py  image_save_api.py
webpeditor_app/api_views/: converted_images_api_view.py  image_delete_converted_api.py  image_download_converted_api.py  image_download_edited_api.py  image_get_original_api.py  image_save_api.py
webpeditor_app/application/: __init__.py  di.py
webpeditor_app/commands/: converted_images_commands.py  edited_images_commands.py  original_images_commands.py
webpeditor_app/common/: __init__.py  api_key_utils.py  asyncio_utils.py  di.py  di_container.py  result_extensions.py  resultant.py  validator_abc.py
webpeditor_app/controllers/: controller_base.py  image_converter_controller.py  image_session.py
webpeditor_app/core/: __init__.py  awaitable_context_result.py  awaitable_enumerable_context_result.py  based_result.py  context_result.py  decorators.py  di.py  di_container.py  di_helper.py  enumerable_context_result.py  error_context.py  hash_utils.py  logger.py  request_service.py  webpeditor_logger.py  webpeditorlogger.py
webpeditor_app/database/: mongodb.py
webpeditor_app/domain/: converter_queries.py  editor_queries.py
webpeditor_app/forms/: forms.py
webpeditor_app/infrastructure/: __init__.py  di.py
webpeditor_app/middlewares/: error_handling.py  exception.py  (+2 more)
(+497 files in other folders)
