[tool.poetry]
name = "webpeditor"
version = "0.1.0"
description = ""
authors = ["Temirkhan Amanzhanov <tima1199@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pipenv-poetry-migrate = "^0.5.10"
astroid = "^3.3.5"
dill = "^0.3.9"
isort = "^5.13.2"
lazy-object-proxy = "^1.10.0"
tomlkit = "*"
platformdirs = "^4.3.6"
asgiref = "*"
django-appconf = "*"
django-compressor = "^4.5.1"
dnspython = "*"
mccabe = "*"
pip = "*"
pycodestyle = "*"
pytz = "^2024.2"
rcssmin = "^1.1.2"
rjsmin = "^1.2.2"
setuptools = "*"
toml = "*"
tomli = "*"
typing-extensions = "*"
wheel = "*"
wrapt = "*"
django-cors-headers = "*"
pymongo = "^4.10.1"
django-environ = "*"
django-extensions = "*"
requests = "^2.32.3"
cython = "*"
ipython = "*"
django-imagekit = "*"
opencv-python = "*"
gunicorn = "*"
whitenoise = "*"
python-dotenv = "*"
cloudinary = "*"
raven = "*"
redis = "^5.1.1"
py-spy = "*"
pillow = "^10.4.0"
mongoengine = "*"
django-jsonfield = "*"
deptry = "*"
cryptography = "^43.0.1"
certifi = "^2024.8.30"
channels = {extras = ["daphne"], version = "^4.1.0"}
twisted = {extras = ["http2", "tls"], version = "^24.7.0"}
djangorestframework = "^3.15.2"
django = "^5.1.2"
sqlparse = "^0.5.1"


[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.57"
pip-audit = "^2.7.3"
pre-commit = "^4.0.1"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 150
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501", "B008"]
unfixable = ["B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
