[project]
name = "webpeditor"
version = "1.1.0"
requires-python = ">=3.13"
description = ""
license = "MIT License"
readme = "README.md"
authors = [{name = "Temirkhan Amanzhanov", email = "tima1199@gmail.com"}]
dependencies = [
    "aiofiles>=24.1.0",
    "aioreactive>=0.20.0",
    "anydi>=0.39.3",
    "asgiref>=3.8.1",
    "certifi>=2024.12.14",
    "channels[daphne]>=4.2.0",
    "cryptography>=43.0.3",
    "deptry>=0.21.2",
    "dill>=0.3.9",
    "django>=5.1.5",
    "django-allauth[mfa,socialaccount]>=65.9.0",
    "django-appconf>=1.0.6",
    "django-compressor>=4.5.1",
    "django-cors-headers>=4.6.0",
    "django-extensions>=3.2.3",
    "django-jazzmin>=3.0.1",
    "django-ninja>=1.3.0",
    "django-ninja-extra>=0.21.8",
    "django-otp>=1.5.4",
    "django-stubs>=5.2.0",
    "django-stubs-ext>=5.1.3",
    "django-types>=0.20.0",
    "djhtml>=3.0.7",
    "dnspython>=2.7.0",
    "docutils>=0.21.2",
    "exifread>=3.3.1",
    "expression[pydantic]>=5.6.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "lazy-object-proxy>=1.10.0",
    "loguru>=0.7.3",
    "mccabe>=0.7.0",
    "names-generator>=0.2.0",
    "ninja-schema>=0.14.1",
    "pillow>=11.1.0",
    "platformdirs>=4.3.6",
    "pycodestyle>=2.12.1",
    "python-dotenv>=1.1.0",
    "pytz>=2024.2",
    "qrcode>=8.0",
    "reactpy-django>=5.2.1",
    "shortuuid>=1.0.13",
    "sqlparse>=0.5.3",
    "twisted[http2, tls]>=24.11.0",
    "types-linq>=1.2.1",
    "typing-extensions>=4.12.2",
    "uuid-utils>=0.11.0",
    "whitenoise>=6.8.2",
    "wrapt>=1.17.2",
]

[project.urls]
Homepage = "https://webpeditor.fly.dev"

[dependency-groups]
dev = [
    "pip-audit>=2.7.3",
    "pre-commit>=4.0.1",
    "basedpyright>=1.27.1",
    "ruff>=0.11.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 140
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "F401"]
ignore = ["E501", "B008"]
unfixable = ["B"]
